; ModuleID = '/home/carl/AnghaBench/linux/mm/kasan/extr_generic_report.c_find_first_bad_addr.c'
source_filename = "/home/carl/AnghaBench/linux/mm/kasan/extr_generic_report.c_find_first_bad_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KASAN_SHADOW_SCALE_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @find_first_bad_addr(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i8*, i8** %3, align 8
  store i8* %6, i8** %5, align 8
  br label %7

7:                                                ; preds = %22, %2
  %8 = load i8*, i8** %5, align 8
  %9 = load i8*, i8** %3, align 8
  %10 = load i64, i64* %4, align 8
  %11 = getelementptr i8, i8* %9, i64 %10
  %12 = icmp ult i8* %8, %11
  br i1 %12, label %13, label %20

13:                                               ; preds = %7
  %14 = load i8*, i8** %5, align 8
  %15 = call i64 @kasan_mem_to_shadow(i8* %14)
  %16 = inttoptr i64 %15 to i32*
  %17 = load i32, i32* %16, align 4
  %18 = icmp ne i32 %17, 0
  %19 = xor i1 %18, true
  br label %20

20:                                               ; preds = %13, %7
  %21 = phi i1 [ false, %7 ], [ %19, %13 ]
  br i1 %21, label %22, label %27

22:                                               ; preds = %20
  %23 = load i32, i32* @KASAN_SHADOW_SCALE_SIZE, align 4
  %24 = load i8*, i8** %5, align 8
  %25 = sext i32 %23 to i64
  %26 = getelementptr i8, i8* %24, i64 %25
  store i8* %26, i8** %5, align 8
  br label %7

27:                                               ; preds = %20
  %28 = load i8*, i8** %5, align 8
  ret i8* %28
}

declare dso_local i64 @kasan_mem_to_shadow(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
